# framealloc

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md  TECHNICAL.md  build.rs
.github/workflows/: bench.yml
benches/: allocator.rs  allocators.rs  minimal_mode.rs  optimizations.rs
cargo-fa/: Cargo.toml  README.md
cargo-fa/src/: cli.rs  config.rs  diagnostics.rs  explain.rs  main.rs  output.rs  parser.rs  report.rs
cargo-fa/src/lints/: architecture.rs  async_safety.rs  budgets.rs  dirtymem.rs  gpu.rs  mod.rs  rapier.rs  threading.rs
dev/bench/: data.js
docs/: Tokio-Frame.md  advanced.md  async.md  cookbook.md  game-dev.md  getting-started.md  migration.md  patterns.md  performance.md  rapier-integration.md  troubleshooting.md
examples/: 01_hello_framealloc.rs  02_frame_loop.rs  03_pools_and_heaps.rs  04_threading.rs  05_tags_and_budgets.rs  06_custom_allocator.rs  07_batch_optimization.rs  08_unified_allocation.rs  allocation_groups.rs  basic_usage.rs  handle_allocation.rs  rapier_physics.rs  streaming_assets.rs
src/: handles.rs  lib.rs  streaming.rs
src/allocators/: deferred.rs  frame.rs  handles.rs  heap.rs  mod.rs  slab.rs  streaming.rs
src/api/: alloc.rs  allocator_impl.rs  barrier.rs  checkpoint.rs  config.rs  deferred_control.rs  frame_collections.rs  groups.rs  lifecycle.rs  mod.rs  phases.rs  promotion.rs  retention.rs  scope.rs  scratch.rs  snapshot.rs  stats.rs  tag.rs  tagged.rs  thread_budget.rs  transfer.rs  wrappers.rs
src/bevy/: mod.rs  plugin.rs  resource.rs  systems.rs
src/coordinator/: budget.rs  mod.rs  sync.rs  unified_allocator.rs
src/core/: budget.rs  global.rs  mod.rs  tls.rs
src/cpu/: mod.rs
src/debug/: backtrace.rs  mod.rs  poison.rs
src/diagnostics/: behavior.rs  context.rs  emit.rs  hooks.rs  kind.rs  macros.rs  mod.rs  snapshot.rs  strict.rs  tracy.rs
src/gpu/: dummy.rs  mod.rs  traits.rs
src/gpu/vulkan/: allocator.rs  buffer.rs  mod.rs
src/rapier/: mod.rs  rapier2d.rs  rapier3d.rs
src/sync/: atomics.rs  mod.rs  mutex.rs
src/tokio/: async_pool_guard.rs  mod.rs  task_alloc.rs
src/util/: layout.rs  mod.rs  size.rs
tests/: integration_tests.rs  rapier_integration_test.rs
